k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: dimagram
  namespace: dimagram
  labels:
    app: dimagram
spec:
  ports:
  - port: 8080
    name: http
  clusterIP: None
  selector:
    app: dimagram
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: dimagram
  namespace: dimagram
spec:
  serviceName: "dimagram"
  replicas: 1
  selector:
    matchLabels:
      app: dimagram
  template:
    metadata:
      labels:
        app: dimagram
    spec:
      containers:
      - name: dimagram
        image: ghcr.io/dimagram/creator
        imagePullPolicy: Always
        ports:
        - containerPort: 8080
          name: http
        volumeMounts:
        - name: data
          mountPath: /app/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dimagram-ingress
  namespace: dimagram
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    flame.pawelmalak/icon: camera
    flame.pawelmalak/name: Dimagram Creator
    flame.pawelmalak/type: app
    flame.pawelmalak/url: https://dimagram.bobr.casa
spec:
  ingressClassName: lan
  rules:
  - host: dimagram.bobr.casa
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dimagram
            port:
              number: 8080
  tls:
  - hosts:
    - has.bobr.casa
    secretName: has-tls
